# career-tailor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  conftest.py  pyproject.toml  try_career.py  try_profile_ingest.py  try_resume_build.py  try_resume_tweak.py  try_search.py
.github/workflows/: ci.yml  publish.yml
brave_search/: client.py  config.py
brave_search/tests/: test_client.py  test_integration.py
career_agent/: __init__.py  agent.py  deps.py  models.py
career_agent/tests/: test_agent.py
career_tailor/: __init__.py
common/: telemetry.py
examples/: README.md  sample_job_description.md  sample_profile.json
resume_builder/: __init__.py  deps.py  render.py  style.css  tweak.py
resume_data/: __init__.py  models.py  store.py
resume_data/tests/: test_models.py
resume_ingest/: __init__.py
scripts/: README.md  try_profile_update.py  try_resume_tweak.py
src/brave_search/: __init__.py  models.py  telemetry.py
src/career_agent/: config.py
src/career_tailor/: cli.py  privacy.py
src/career_tailor/tests/: test_cli.py  test_privacy.py
src/common/: cli.py
src/resume_builder/: agent.py  models.py  store.py  style.css
src/resume_builder/tests/: test_builder.py
src/resume_ingest/: agent.py  deps.py  sources.py
src/resume_ingest/tests/: test_ingest.py
