[project]
name = "career-tailor"
version = "0.1.0"
description = "Agent-assisted resume tailoring for job seekers."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bryce Chriestenson" }]
keywords = ["resume", "jobs", "career", "agents", "ats"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.7",
    "opentelemetry-api>=1.29",
    "structlog>=24.4",
    "pydantic-ai>=1.77.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.0",
]

[project.scripts]
career-tailor = "career_tailor.cli:main"

[project.urls]
Homepage = "https://github.com/chriestensonb/career-tailor"
Issues = "https://github.com/chriestensonb/career-tailor/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "brave_search",
    "career_agent",
    "career_tailor",
    "common",
    "resume_builder",
    "resume_data",
    "resume_ingest",
]

[tool.setuptools.package-data]
resume_builder = ["style.css"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "opentelemetry-sdk>=1.29",
    "ruff>=0.8",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
